--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
   },
   "homepage": "https://github.com/AlexGalichenko/tabletop#readme",
   "dependencies": {
+    "@babylonjs/core": "^4.0.3",
+    "@babylonjs/loaders": "^4.0.3",
+    "babylonjs": "^4.1.0",
     "firebase": "^7.14.3",
     "install": "^0.13.0",
     "interactjs": "^1.9.14",
     "uniqid": "^5.2.0",
     "vue": "^2.6.11",
+    "vue-babylonjs": "^1.0.0-beta.7",
     "vue-material": "^1.0.0-beta-13",
     "vue-router": "^3.1.6",
     "vuedraggable": "^2.23.2",
