--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babylonjs/core": "^4.0.3",
     "@babylonjs/loaders": "^4.0.3",
     "babylonjs": "^4.1.0",
+    "babylonjs-gui": "^4.1.0",
     "firebase": "^7.14.3",
     "install": "^0.13.0",
     "interactjs": "^1.9.14",
