--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babylonjs/loaders": "^4.0.3",
     "babylonjs": "^4.1.0",
     "babylonjs-gui": "^4.1.0",
+    "clone-deep": "^4.0.1",
     "firebase": "^7.14.3",
     "install": "^0.13.0",
     "interactjs": "^1.9.14",
