--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@babylonjs/core": "^4.0.3",
     "@babylonjs/loaders": "^4.0.3",
     "babylonjs": "^4.1.0",
-    "babylonjs-gui": "^4.1.0",
     "clone-deep": "^4.0.1",
     "firebase": "^7.14.3",
     "install": "^0.13.0",
@@ -50,6 +49,7 @@
     "vue-loader": "^15.8.3",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.41.5",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "latest"
   }
